--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <nav>
             <a href="#">Courses</a>
             <a href="#">About us</a>
-            <a href="#" id="get-started">Get Started</a>
+            <a href="registration.html" id="get-started">Get Started</a>
           </nav>
         </div>  
       </header>
